# callguard

./: .env.example  .gitignore  README.md  alembic.ini  dashboard.py  pyproject.toml
alembic/: env.py
alembic/versions/: 44cee7cc8337_initial_schema.py
app/: main.py
app/api/: dependencies.py
app/api/routes/: calls.py  health.py  simulate.py
app/core/: config.py  database.py  logging.py
app/db/: models.py
app/domain/: enums.py
app/domain/rules/: policy_rules.py
app/domain/services/: downstream_adapter.py  escalation_service.py  handoff_service.py  intent_service.py  policy_service.py  simulation_service.py
app/repositories/: call_repository.py  decision_repository.py  event_repository.py
app/schemas/: calls.py  common.py  simulate.py
tests/: conftest.py  test_calls.py  test_escalation_service.py  test_policy_service.py  test_simulation.py
